--- a/JKMapp/templates/home.html
+++ b/JKMapp/templates/home.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="{% static "style/index.css" %}">
+    <link rel="stylesheet" href="{% static "style\index.css" %}">
   </head>
   <body>
 
