--- a/JKMapp/templates/home.html
+++ b/JKMapp/templates/home.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="{% static "style\index.css" %}">
   </head>
   <body>
 
@@ -46,7 +46,7 @@
             <button>Book a Ride</button>
         </div>
         <div class="right">
-            <img src="background.png">
+            <img src="/static/assets/background.png">
         </div>
     </div>
 
